# BreakOut

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Data/shaders/: particle.frag  postProcessing.vs
include/: BallObject.h  Game.h  GameLevel.h  GameObject.h  ParticleGenerator.h  PostProcessor.h  PowerUp.h  ResourceManager.h  Shader.h  SpriteRenderer.h  TextRenderer.h  Texture2D.h
src/: BallObject.cpp  BreakOut.cpp  Game.cpp  GameLevel.cpp  GameObject.cpp  ParticleGenerator.cpp  PostProcessor.cpp  ResourceManager.cpp  Shader.cpp  SpriteRenderer.cpp  TextRenderer.cpp  Texture2D.cpp
